force-app/main/default/objects/My_Customers__c/My_Customers__c.object-meta.xml
<CustomObject>
    <label>My Customers</label>
    <nameField>
        <label>Customers Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>My Customers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>