force-app/main/default/objects/My_Customers__c/fields/Account_Creation_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Creation_Status__c</fullName>
    <defaultValue>&quot;Under Review&quot;</defaultValue>
    <label>Account Creation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Under Review</fullName>
                <color>#6666CC</color>
                <label>Under Review</label>
            </value>
            <value>
                <fullName>Account Created Successfully</fullName>
                <color>#009900</color>
                <label>Account Created Successfully</label>
            </value>
            <value>
                <fullName>Account Creation Rejected</fullName>
                <color>#FF0000</color>
                <label>Account Creation Rejected</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>