force-app/main/default/objects/My_Customers__c/fields/First_Deposit_Amount__c.field-meta.xml
<CustomField>
    <fullName>First_Deposit_Amount__c</fullName>
    <label>First Deposit Amount</label>
    <precision>17</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>