force-app/main/default/objects/My_Customers__c/fields/Total_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Total_Accounts__c</fullName>
    <label>Total Accounts</label>
    <summaryForeignKey>My_Accounts__c.My_Customers__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>