force-app/main/default/objects/My_Customers__c/validationRules/First_depoasit_amount.validationRule-meta.xml
<ValidationRule>
    <fullName>First_depoasit_amount</fullName>
    <active>true</active>
    <description>First deposit amount should be greater then 500</description>
    <errorConditionFormula>First_Deposit_Amount__c  &lt; 5000</errorConditionFormula>
    <errorDisplayField>First_Deposit_Amount__c</errorDisplayField>
    <errorMessage>First Deposit amount should be grater then 5000</errorMessage>
</ValidationRule>