force-app/main/default/objects/My_Customers__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Creation_Status__c</columns>
    <columns>Gender__c</columns>
    <columns>Contact_Number__c</columns>
    <columns>Aadhar_Number__c</columns>
    <columns>Country__c</columns>
    <columns>City__c</columns>
    <columns>Total_Accounts__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>